Removing List.of (not compatible with Java 8)